samples/_failures_safe/1761248931_ff98fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_921c0645.c: In function ‘main’:
./samples/SAFE/__tmp_921c0645.c:169:13: error: expected declaration or statement at end of input
  169 |             }
      |             ^
./samples/SAFE/__tmp_921c0645.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_921c0645.c:169:13: error: expected declaration or statement at end of input
